Reorder initiatives. Two-col on mobile. Fix donate button.

--- a/wp/wp-content/themes/mediasanctuary/css/global/_responsive.scss
+++ b/wp/wp-content/themes/mediasanctuary/css/global/_responsive.scss
@@ -71,13 +71,29 @@ Quick and Dirty for homepage. Will separate out after launch -- MJS
   .two-col, .three-col, .four-col {
     margin: 0;
     .col {
-       width: 100% !important; 
+       width: 100%; 
        padding: 0;
        &:last-child {
          padding: 20px 0 0;
        }
     }
+    &.initiatives__list {
+      margin: 0 -5px;
+      .col {
+        width: 50%;
+        padding: 5px;
+      }
+    }
   }
+  
+  .two-col {
+    .col {
+      width: 100% !important;
+    }
+  }
+  
+  
+  
   
   h2 {
     font-size: 32px;
